<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/a"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/utonomiczny"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/s"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ystem"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/e"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/lektroniczny"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/select_a_device"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/startScreen">

        <Button
            android:id="@+id/discoverButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button_background"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/discover_devices"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible"
            android:layout_marginBottom="35sp"/>

        <ImageView
            android:id="@+id/pulsingIcon"
            android:contentDescription="@string/pulsing_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/baseline_find_replace_24"
            android:visibility="gone"
            android:layout_marginBottom="35sp"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/deviceListViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:fontFamily="sans-serif-medium"
        android:visibility="gone">

        <ListView
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/logContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/toggleLogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_logs"
            android:visibility="gone"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"/>

        <ScrollView
            android:id="@+id/logScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:id="@+id/logTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_logs_yet"
                android:textSize="16sp"
                android:background="@drawable/dialog_background"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:visibility="gone"/>
        </ScrollView>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@color/white"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/ll2"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/stopButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/stop_mission"
                        android:drawableLeft="@drawable/baseline_stop_24"
                        android:visibility="gone"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-medium"
                        android:background="@drawable/stop_button_selector"
                        tools:ignore="ButtonStyle,RtlHardcoded" />

                    <Button
                        android:id="@+id/startButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/start_mission"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:drawableLeft="@drawable/baseline_start_24"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-medium"
                        android:visibility="gone"
                        android:background="@drawable/start_button_selector"
                        tools:ignore="ButtonStyle,RtlHardcoded" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:fontFamily="sans-serif-medium"
                            android:paddingTop="6dp"
                            android:text="@string/robot_mission_status"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="gone"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/latestMessageTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:visibility="gone"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/mision_status_icon"
                        android:visibility="gone"
                        app:srcCompat="@drawable/baseline_find_replace_24" />

                </LinearLayout>

                <TextView
                    android:id="@+id/test11"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mission_time"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingTop="6dp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/time"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-medium"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
