<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/closeIcon"
        android:contentDescription="@string/close_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/baseline_close_24"
        android:padding="5dp"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/closeIcon"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/celebrateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_finish_line_has_been_reached"
            android:drawableRight="@drawable/baseline_celebration_24"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

        <ImageView
            android:id="@+id/celebrateImage"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:contentDescription="@string/celebration_image"
            android:src="@drawable/meta" />

        <Button
            android:id="@+id/endMissionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_complite"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/end_mission_button"/>
    </LinearLayout>

</RelativeLayout>
